# multi-query

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: release.yml  tests.yml
HomebrewFormula/: multi-query.rb
pkg/brew/: multi-query.rb
scripts/: build-deb.sh  build-osx.sh  generate-formula.sh  install-hooks.sh  sha256-releases  ubuntu-install-dependencies
src/: config.rs  main.rs
src/app/: app.rs  db.rs  mod.rs  types.rs
src/cli/: arguments.rs  mod.rs
src/tests/: cli_arguments_test.rs  column_types_test.rs  config_test.rs  mod.rs  sanity_test.rs  utils.rs
